@startuml

title __CONFIG's Class Diagram__\n

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.AzureStorageConfig {
          - environment : Environment
          + cloudBlobClient()
          + testBlobContainer()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.MailConfig {
          + getJavaMailSender()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.QuartzJobConfig {
          + deleteUserContainerJobDetails()
          + jobATrigger()
          + mockContentJob()
          + mockContentJobTrigger()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.RabbitMQConfig {
          + amqpAdmin()
          + converter()
          + rabbitTemplate()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.RedisConfig {
          - logger : Logger
          - password : String
          - redisHostName : String
          - redisPort : int
          ~ jedisConnectionFactory()
          ~ redisCacheManagerBuilderCustomizer()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.SecurityConfig {
          - bCryptPasswordEncoder : BCryptPasswordEncoder
          + authenticationManager()
          + configure()
          # configure()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.SpringFoxConfig {
          + apiDocket()
          - apiInfo()
          - apiKey()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace config {
      class tech.eportfolio.server.config.WebConfig {
          + addCorsMappings()
          + addInterceptors()
      }
    }
  }
  

  tech.eportfolio.server.config.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  tech.eportfolio.server.config.SecurityConfig o-- tech.eportfolio.server.security.JwtAccessDeniedHandler : jwtAccessDeniedHandler
  tech.eportfolio.server.config.SecurityConfig o-- tech.eportfolio.server.security.JWTAuthenticationEntryPoint : jwtAuthenticationEntryPoint
  tech.eportfolio.server.config.SecurityConfig o-- tech.eportfolio.server.security.JWTAuthorizationFilter : jwtAuthorizationFilter
  tech.eportfolio.server.config.SecurityConfig o-- tech.eportfolio.server.service.impl.UserServiceImpl : userDetailsService
  tech.eportfolio.server.config.WebConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
